--- a/data-binding/src/app/data-binding/data-binding.component.html
+++ b/data-binding/src/app/data-binding/data-binding.component.html
@@ -88,7 +88,7 @@
         (mouseout)="onMouseOverOut()"
         [class.highlight]="isMouseOver"
         >
-         Passe o mouse sobre mim
+         Passe o mouse sobre mim SE QUISER É CLARO NÃO [E OBRIGADO]
       </span>
     </div>
   </article>
