ngswitch and ngSswitch.case

--- a/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
+++ b/diretivas/src/app/diretiva-ngif/diretiva-ngif.component.html
@@ -1,7 +1,7 @@
 <h5>*ngIf</h5>
 
 <div *ngIf="cursos.length > 0" >
-  Lista de cursos aqui.
+  Lista de cursos aqui. ( se o tamanho de curso array for > 0)
 </div>
 <div *ngIf="cursos.length == 0" >
   Não existem cursos para serem listados.
