--- a/diretivas/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
+++ b/diretivas/src/app/diretiva-ngswitch/diretiva-ngswitch.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-dark bg-primary">
   <div class="nav navbar-nav">
     <a class="nav-item nav-link"
-       [class.active]="aba == 'home'"
-       (click)="aba = 'home'">Home</a>
+       [class.active]="aba == 'essa'"
+       (click)="aba = 'essa'">essa</a>
     <a class="nav-item nav-link"
       [class.active]="aba == 'mapa'"
       (click)="aba = 'mapa'">Mapa</a>
