--- a/servicos/src/app/criar-curso/criar-curso.component.html
+++ b/servicos/src/app/criar-curso/criar-curso.component.html
@@ -1,7 +1,7 @@
 <h5>Compartilhando um serviço entre componentes</h5>
 
 <input type="text" #cursoInput>
-<button (click)="onAddCurso(cursoInput.value)">Add Curso</button>
+<button (click)="onAddCurso(cursoInput.value)">Add Curso em string</button>
 
 <ul>
   <li *ngFor="let curso of cursos">
