--- a/rotas/src/styles.css
+++ b/rotas/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import '~https://fonts.googleapis.com/icon?family=Material+Icons'; */
 @import "~materialize-css/dist/css/materialize.css";
+@import"../node_modules/materialize-css/dist/css/materialize.css";
 
 @font-face {
   font-family: 'Material Icons';
