--- a/rotas/src/app/alunos/aluno-form/aluno-form.component.html
+++ b/rotas/src/app/alunos/aluno-form/aluno-form.component.html
@@ -5,7 +5,8 @@
 <div class="col s12">
   <div class="row">
     <div class="input-field col s12">
-      <input disabled [(ngModel)]="aluno.id" id="disabled" type="text">
+      <input disabled [(ngModel)]="aluno.id" id="disabled" type="text"> 
+      <!-- não esquercer de colocar FormsModule no alunos.modulo.ts pq se nao nao funciona o ngmodel -->
       <label for="disabled" class="active">#</label>
     </div>
   </div>
